samples/_failures_safe/1761688369_b9663d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_20650cf8.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_20650cf8.c:146:17: error: expected ‘,’ or ‘;’ at end of input
  146 |                 int v = graph->edges[i].dest
      |                 ^~~
./samples/SAFE/__tmp_20650cf8.c:146:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_20650cf8.c:146:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_20650cf8.c:146:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_20650cf8.c:146:17: error: expected declaration or statement at end of input
